chore: add codegen watch of swagger
