# packages/books-service/src/schema.swagger.json
@@ -12,7 +12,7 @@
         }
       }
     },
-    "/api/v1/books/{id}": {
+    "/api/v1/book/{id}": {
       "get": {
         "operationId": "BooksController_get",
         "parameters": [
@@ -38,11 +38,11 @@
           }
         },
         "tags": [
-          "books"
+          "book"
         ]
       }
     },
-    "/api/v1/books": {
+    "/api/v1/book": {
       "get": {
         "operationId": "BooksController_getList",
         "parameters": [],
@@ -62,7 +62,7 @@
           }
         },
         "tags": [
-          "books"
+          "book"
         ]
       }
     },
